--- a/so/style.css
+++ b/so/style.css
@@ -37,12 +37,12 @@
     clip-path: circle(var(--_c, 55% at 30% 30%));
     place-self: end;
   }
-  h1{
+  h1, p{
     text-align: center;
     color: white;
   }
   body {
-    margin: 0;
+    margin: 10px;
     min-height: 100vh;
     display: grid;
     place-content: center;
